--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -73,7 +73,7 @@ background-repeat: no-repeat;
 }
 
 #logo{
-max-width: 35vw;
+max-width: 30vw;
 }
 
 /* card */
@@ -91,13 +91,35 @@ max-width: 35vw;
     background-repeat: repeat;
     background-size: contain;
     border-radius: 25px;
-    border: 14px solid var(--easy-beige);
-    height: 430px;
-    width: 290px;
+    border: 10px solid var(--easy-beige);
+    height: 330px;
+    width: 190px;
     display: flex;
     justify-content: center;
     align-items: center;
+    perspective: 1000px;
 }
+
+.flip-card-inner{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+
+  /* Position the front and back side */
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
 
 /* temporaneamente nascosto per occuparmi della parte frontale!! */
 .flip-card-back{
@@ -125,7 +147,7 @@ max-width: 35vw;
 }
 
 h2{
-    font-size: 40px;
+    font-size: 32px;
     color: var(--dark-red);
 }
 
