--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -2,7 +2,7 @@
 --dark-red: #3F1C21;
 --easy-beige: #EAE3D3;
 --red: #98333E;
-
+--black-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
 }
 
 /* RESET STYLE */
@@ -77,59 +77,67 @@ max-width: 30vw;
 }
 
 /* card */
-.card-section{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    row-gap: 28px;
-}
 
-.flip-card{
-    background-color: var(--red);
-    background-image: url(/random-generator/resources/images/pattern.png);
-    background-repeat: repeat;
-    background-size: contain;
-    border-radius: 25px;
-    border: 10px solid var(--easy-beige);
+/* This is just to center the card in the page */
+.card-section{ 
+    display: flex;
+    justify-content: center;
+}
+ 
+/* card real dimensions */
+.maincontainer{
     height: 330px;
     width: 190px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    perspective: 1000px;
 }
 
-.flip-card-inner{
-    position: relative;
-    width: 100%;
+/* card design */
+.card-design{
     height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
+    width: 100%;
+    border-radius: 25px;
+    border: 10px solid var(--easy-beige);
+    background-color: var(--red);
+    box-shadow:var(--black-shadow);
+    position: absolute;
+}
+
+/* card container */
+.card{
+    height:100%;
+    width: 100%;
+    position: relative;
     transform-style: preserve-3d;
 }
 
-.flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-
-  /* Position the front and back side */
-.flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-  }
-
-/* temporaneamente nascosto per occuparmi della parte frontale!! */
-.flip-card-back{
-    display: none; /* <-- CAMBIARE IN FLEX!!!*/  
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    row-gap: 20px;
+.card:hover{
+    cursor: pointer;
 }
 
+/* card parts */
+.front-card{
+    background-image: url(/random-generator/resources/images/pattern.png);
+    background-repeat: repeat;
+    background-size: contain;
+}
+
+.back-card{
+    display:none;
+    background-color: var(--red);
+    justify-content: center;
+    perspective: 1000px;
+}
+
+.quote-box{
+    width:100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin: auto 10px;;
+    flex-flow:wrap;
+    align-items: center;
+    flex-direction: column;
+}
+    
 /* bottom */
 .bottom__text{
     display: flex;
