--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -106,22 +106,27 @@ max-width: 30vw;
     height:100%;
     width: 100%;
     position: relative;
+    transition: transform 1500ms;
+}
+
+/*  .card:hover{ 
+    cursor: pointer;
+    transform: rotateY(180deg);
     transform-style: preserve-3d;
 }
-
-.card:hover{
-    cursor: pointer;
-}
+*/
 
 /* card parts */
+/*
 .front-card{
     background-image: url(/random-generator/resources/images/pattern.png);
     background-repeat: repeat;
     background-size: contain;
 }
+*/
 
 .back-card{
-    display:none;
+    display:flex;
     background-color: var(--red);
     justify-content: center;
     perspective: 1000px;
