--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -2,7 +2,8 @@
 --dark-red: #3F1C21;
 --easy-beige: #EAE3D3;
 --red: #98333E;
---black-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
+--black-shadow: rgba(0, 0, 0, 0.3);
+--gold-aura: #f9dd9d;
 }
 
 /* RESET STYLE */
@@ -69,78 +70,108 @@ background-repeat: no-repeat;
 .banner{
     display: flex;
     justify-content: center;
-    padding:75px 2px 25px 2px;
+    padding:45px 2px 12px 2px;
 }
 
 #logo{
-max-width: 30vw;
+max-width: 35vw;
 }
 
 /* card */
 
 /* This is just to center the card in the page */
 .card-section{ 
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
 }
  
 /* card real dimensions */
 .maincontainer{
-    height: 330px;
+    height: 300px;
     width: 190px;
+}
+
+@keyframes glowing{
+    0% {box-shadow:0px 0px 12px 12px var(--gold-aura);}
+    100% {box-shadow:0px 0px 8px 8px var(--gold-aura);}
+}
+
+.card-design:hover{
+    box-shadow:0px 0px 12px 12px var(--gold-aura);
+    animation-name: glowing;
+    animation-duration: 0.7s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count:infinite;
+    animation-direction: alternate-reverse;
+}
+
+.card-design:focus{
+    outline:2px solid #3F1C21;
+    outline-offset: 2px;
 }
 
 /* card design */
 .card-design{
     height: 100%;
-    width: 100%;
-    border-radius: 25px;
-    border: 10px solid var(--easy-beige);
     background-color: var(--red);
-    box-shadow:var(--black-shadow);
-    position: absolute;
+    border-radius: 15px;
+    border: 10px solid var(--easy-beige);
+    box-shadow:5px 5px 5px var(--black-shadow);
 }
 
 /* card container */
-.card{
+.cardbox{
     height:100%;
     width: 100%;
     position: relative;
+    /* 
     transition: transform 1500ms;
+    transform: rotateY(180deg);*/
 }
 
-/*  .card:hover{ 
+.cardbox:hover{
     cursor: pointer;
-    transform: rotateY(180deg);
-    transform-style: preserve-3d;
 }
-*/
+
+.your-quote{
+    position: fixed;
+    top: 20px;
+}
+
 
 /* card parts */
-/*
+
 .front-card{
     background-image: url(/random-generator/resources/images/pattern.png);
     background-repeat: repeat;
     background-size: contain;
 }
-*/
 
 .back-card{
-    display:flex;
+    display:none;
     background-color: var(--red);
     justify-content: center;
     perspective: 1000px;
 }
 
 .quote-box{
+    top:20px;
     width:100%;
     height: 100%;
     display: flex;
-    justify-content: space-around;
-    margin: auto 10px;;
+    justify-content: center;
+    margin: auto 10px;
     flex-flow:wrap;
     align-items: center;
     flex-direction: column;
+    user-select: none;
+}
+
+.space{
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
     
 /* bottom */
@@ -149,9 +180,18 @@ max-width: 30vw;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    row-gap: 50px;
-    padding: 50px 10px 50px;
+    row-gap: 30px;
+    padding: 50px 10px 20px 10px;
 }
+
+.display{
+    display: flex;
+}
+
+.hidden{
+    display: none;
+}
+
 
 /* typography */
 .formatting{
@@ -170,6 +210,8 @@ h3{
 }
 
 h4{
+    position: fixed;
+    top: 20px;
     font-size: 18px;
     color: var(--easy-beige);
 }
@@ -178,7 +220,5 @@ p{
     font-size: 18px;
     font-weight: bold;
     color: var(--easy-beige);
+    line-height: 20px;
 }
-
-
-
